gcc/libcpp: support -ffile-prefix-map=<old>=<new>

Similar -fdebug-prefix-map, add option -ffile-prefix-map to map one
directory name (old) to another (new) in __FILE__, __BASE_FILE__ and
__builtin_FILE ().

https://gcc.gnu.org/bugzilla/show_bug.cgi?id=70268

Upstream-Status: Submitted [gcc-patches@gcc.gnu.org]
Signed-off-by: Hongxu Jia <hongxu.jia@windriver.com>